[gd_scene load_steps=9 format=3 uid="uid://combat_level_001"]

[ext_resource type="Script" path="res://scripts/CombatLevelManager.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bvxc8y7qm8k2h" path="res://scenes/Player3D.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/enemies/BasicMeleeEnemy.gd" id="3"]
[ext_resource type="Script" path="res://scripts/enemies/RangedArcherEnemy.gd" id="4"]
[ext_resource type="Script" path="res://scripts/enemies/AgileRogueEnemy.gd" id="5"]

[sub_resource type="BoxMesh" id="BoxMesh_ground"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.3, 0.3, 0.4, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.4
tonemap_mode = 2
glow_enabled = true
glow_intensity = 0.2

[node name="CombatLevel" type="Node3D"]
script = ExtResource("1")

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 12, 0)
light_energy = 1.5
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="Environment"]

[node name="GroundMesh" type="MeshInstance3D" parent="Environment/Ground"]
transform = Transform3D(30, 0, 0, 0, 0.5, 0, 0, 0, 30, 0, -0.5, 0)
mesh = SubResource("BoxMesh_ground")

[node name="GroundCollision" type="CollisionShape3D" parent="Environment/Ground"]
transform = Transform3D(30, 0, 0, 0, 0.5, 0, 0, 0, 30, 0, -0.5, 0)
shape = SubResource("BoxShape3D_ground")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 12, 10)
fov = 75.0

[node name="Player" parent="." groups=["player", "rpg_player"] instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="EnemyWave1" type="Node3D" parent="."]

[node name="Enemy1" type="CharacterBody3D" parent="EnemyWave1" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, -8)
script = ExtResource("3")

[node name="Enemy2" type="CharacterBody3D" parent="EnemyWave1" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -8)
script = ExtResource("3")

[node name="Enemy3" type="CharacterBody3D" parent="EnemyWave1" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, -8)
script = ExtResource("4")

[node name="EnemyWave2" type="Node3D" parent="."]

[node name="Enemy4" type="CharacterBody3D" parent="EnemyWave2" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1, -15)
script = ExtResource("5")

[node name="Enemy5" type="CharacterBody3D" parent="EnemyWave2" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -15)
script = ExtResource("3")

[node name="Enemy6" type="CharacterBody3D" parent="EnemyWave2" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -15)
script = ExtResource("4")

[node name="Enemy7" type="CharacterBody3D" parent="EnemyWave2" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 1, -15)
script = ExtResource("5")

[node name="EnemyWave3" type="Node3D" parent="."]

[node name="Enemy8" type="CharacterBody3D" parent="EnemyWave3" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1, -22)
script = ExtResource("3")

[node name="Enemy9" type="CharacterBody3D" parent="EnemyWave3" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -22)
script = ExtResource("4")

[node name="Enemy10" type="CharacterBody3D" parent="EnemyWave3" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, -22)
script = ExtResource("3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="WaveLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
text = "Combat Level - Wave 1"
horizontal_alignment = 1

[node name="EnemyCountLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "Enemies: 10"
horizontal_alignment = 2

[node name="VictoryPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="VictoryLabel" type="Label" parent="UI/VictoryPanel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
text = "VICTORY!
All enemies defeated!

Press SPACE to continue"
horizontal_alignment = 1
vertical_alignment = 1
